add activity logging feature
