# src/models/ActivityLog.py
@@ -1,0 +1,9 @@
+# models.py
+from datetime import datetime
+from config import db  # make sure to import your db instance
+
+class ActivityLog(db.Model):
+    id = db.Column(db.Integer, primary_key=True)
+    user_id = db.Column(db.Integer, nullable=False)
+    action = db.Column(db.String(50), nullable=False)
+    timestamp = db.Column(db.DateTime, default=datetime.utcnow)
